rename markdown file
T-BD-1

Signed-off-by: Jeff-Duan <1191837698@qq.com>

--- a/404.md
+++ b/404.md
@@ -10,4 +10,5 @@ But, there's a good chance you can find what you're looking for at one of the fo
 * [Home](/ "Jeff-Duan.guthub.io")
 * [Blog](/blog "Jeff-Duan.guthub.io/blog")
 * [Downloads](/downloads "Jeff-Duan.guthub.io/downloads")
+* [Resource](/downloads/resource "Jeff-Duan.guthub.io/downloads/resource")
 * [Presentations](/downloads/presentations "Jeff-Duan.guthub.io/downloads/presentations")
