--- a/blog/_posts/2019-03-23-opening.markdown
+++ b/blog/_posts/2019-03-23-opening.markdown
@@ -15,7 +15,9 @@ tags:
 
 &emsp;慢慢的，接触技术栈越来越多。前后端、数据库、Web架构、服务器维护、任务调度、源站、CDN、Android Build System；
 高级语言涉及makefile、shell、python、java、php；开源工具也使用过不少，如Jenkins、Nexus、OpenGrok等等。
-总而言之，在自己摸索的过程中，总有一些未知的坑，自己踩了一遍又一遍。由此萌生笔记和写作的想法已经很久。
+总而言之，在自己摸索的过程中，总有一些未知的坑，自己踩了一遍又一遍。
+我也会经常访问一些知名博主的Blog，国内大牛阮一峰、 码农翻身刘欣、homeschooler翁天信等等。
+一次偶然的机会，阅读了完全自学的homeschooler翁天信所写的文章，更是给了我很大的决心。由此萌生笔记和写作的想法已经很久。
 想把自己在工作和业余时间内遇到的、解决的问题或者经验，通过自己的理解用简短、明了的方式传达和分享给大家，让大家弄懂某个知识点。希望能帮助大家解决想要解决的问题。
 
 &emsp;同时，我也希望通过笔记和写作能够使自己的陈述和表达能力更好一些。
