--- a/blog/_posts/2019-03-31-ssh_start.markdown
+++ b/blog/_posts/2019-03-31-ssh_start.markdown
@@ -7,4 +7,19 @@ tags:
 
 &emsp;工作中涉及维护几百台编译服务器，利用ssh保护网络必不可少。最近系统的学习了[ssh权威指南](/downloads/resource/ssh/ssh权威指南.pdf)，写一篇文章与大家分享一下，如何利用ssh保护网络的安全。
 
+背景：传统的网络应用程序都有一个可悲的隐患-安全性。
+&emsp;例如：用于远程登录的rlogin，telnet；用于远程执行命令的rsh；用于远程文件拷贝的rcp，ftp。
+&emsp;1.如果用户正在尝试本地与远程服务器之间拷贝文件，那么黑客就可能截取你的数据。
+&emsp;2.如果用户正在使用Internet登录远程的服务器，那么用户名和密码都是以明文的方式在网络中传输，随时可能被截取。
+&emsp;如何预防这些安全隐患呢？我们可以将数据使用加密程序加密成谁也无法看懂的密文传输；服务器架设防火墙把黑客阻隔在网络范围之外等等。
+
+SSH（Secure Shell，安全 Shell）是一种通用的、功能强大的、基于软件的网络安全性解决方案。
+每次使用网络进行通讯时，SSH 都会对传输的数据进行加密，数据发送到服务器，再由SSH 进行解密。整个过程透明，对用户无感知。SSH使用现代的加密算法，足以胜任很多互联网公司应用程序的要求。
+
+SSH虽然叫做Secure Shell，但是它并不像Bourne Shell、C Shell一样是一种真正意义上的Shell。SSH并不是一个命令解释器，也不提供通配符扩展、命令历史记录等功能。实际上SSH 在本地和远程计算机之前使用端到端的加密，创建一个通道来在远程计算机上运行Shell。
+
+
+
+
+
 
