--- a/pages/live/2023-03-19.markdown
+++ b/pages/live/2023-03-19.markdown
@@ -4,3 +4,22 @@ layout: post
 ---
 
 今天是3月19日
+
+今天醒的很早，看着格格还在我身边酣睡，昨晚可能紧张睡的不早。
+
+没想到这丫头会突然跑来找我，更没想到她问也不问，我们好像不约而同就默许了一起住在我家。
+
+和她在一起我们真的就像多年的老友一样，和她聊天无论什么话题，我都是想说就说从不避讳任何话题，除了一点就是之前的感情。
+不过有时想和她做一些事，我还是会犹豫和忐忑，思量半天。
+
+昨晚带她去了南锣鼓巷和朝阳公园，走了一天腿都走断了，带她品尝了西粉堂和北平机器这两个在我的美食清单排名TOP的美食。
+
+等她醒来后，我都忘了到底聊了些什么，说着说着，我决定要和她告白了，真的好笑，我竟然是在我的床上躺着和她告白的。
+
+她说以为我不会和她说出这句话了，我不知道她为什么会这么说，丫头总是给我感觉有时很会争取自己想要的，但有时侯我能感觉到她和我一样有自卑的一面。
+
+想要和她一起变得更好，一起变帅变漂亮。
+
+身份，从今天起存在了。
+
+不想猜未来怎么样，在勇敢一次吧。
